@startuml

title __DATA's Class Diagram__\n

      class calcu.data.Account {
          - employees : ArrayList<Employee>
          - isLoadingData : boolean
          - password : String
          - username : String
          + Account()
          {static} + addAccDatabase()
          + addEmployee()
          + delEmployee()
          + getEmployee()
          + getEmployees()
          + getPassword()
          + getUsername()
          + getisLoadingData()
          + initialize()
          + loadData()
          {static} + newAccount()
          + saveAccount()
          + setPassword()
          + setUsername()
          + setisLoadingData()
      }


  

      class calcu.data.Employee {
          - hourly : double
          - hours : double
          - incomeTax : double
          - insurance : double
          - insuranceType : String
          - monthly : double
          - multiplier : double
          - name : String
          - netSalary : double
          - note : String
          - ohours : double
          - pgb : double
          - phil : double
          - totalSalary : double
          - totalTax : double
          + Employee()
          + getHourlyRate()
          + getHours()
          + getIncomeTax()
          + getInsurance()
          + getInsuranceType()
          + getMonthlySalary()
          + getMultiplier()
          + getName()
          + getNetSalary()
          + getNote()
          + getOvertimeHours()
          + getPgb()
          + getPhil()
          + getProfile()
          + getTotalSalary()
          + getTotalTax()
          + setHourlyRate()
          + setHours()
          + setIncomeTax()
          + setInsurance()
          + setInsuranceType()
          + setMonthlySalary()
          + setMultiplier()
          + setName()
          + setNetSalary()
          + setNote()
          + setOvertimeHours()
          + setPgb()
          + setPhil()
          + setProfile()
          + setTotalSalary()
          + setTotalTax()
      }


  

  calcu.data.Account -up-|> calcu.calcu.Menu
  calcu.data.Employee o-- calcu.calcu.peopleSegment : profile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
